Fix inconsistencies in code appendix

--- a/report/appendix/code.tex
+++ b/report/appendix/code.tex
@@ -14,7 +14,7 @@ The code is structured in a modular way, where each module corresponds to a spec
     \item \textbf{Optimisation}: This module contains the integration with hyper-parameter tuning libraries to find optimal configurations and track the experiments.
 \end{itemize}
 
-The modules are implemented as Python packages, each containing the necessary code and resources for its specific functionality. Additionally, the project contains a folder titled \texttt{examples}, where the main Jupyter notebooks to perform each of the separate tasks of this project are implemented. The directory structure is organized as follows:
+The modules are implemented as Python packages, each containing the necessary code and resources for its specific functionality. Additionally, the project contains a folder titled \texttt{examples}, where the main Jupyter notebooks to perform each of the separate tasks of this project are implemented. The directory structure is organised as follows:
 
 % Add caption and smaller text size and less spacing between lines
 \begin{verbatim}
@@ -55,7 +55,7 @@ xdl-portfolio/
 |   +-- __init__.py
 |   +-- wandb_opt.py
 |
-+-- benchmark/
++-- pbenchmark/
 |   +-- __init__.py
 |   +-- portfolio_benchmark.py
 |
@@ -153,7 +153,7 @@ The code is available as a GitHub repository at \href{https://github.com/ingridp
 
 \section{Optimisation Module}
 
-\captionof{listing}{\texttt{wandb.py}}
+\captionof{listing}{\texttt{wandb\_opt.py}}
 \inputminted[fontsize=\footnotesize,linenos,breaklines=true,breakanywhere=true,frame=lines,baselinestretch=1]{python}{../optimisation/wandb_opt.py}
 
 \section{Examples}
