Rename directory structure

--- a/report/appendix/code.tex
+++ b/report/appendix/code.tex
@@ -14,7 +14,7 @@ The code is structured in a modular way, where each module corresponds to a spec
     \item \textbf{Optimisation}: This module contains the integration with hyper-parameter tuning libraries to find optimal configurations and track the experiments.
 \end{itemize}
 
-The modules are implemented as Python packages, each containing the necessary code and resources for its specific functionality. Additionally, the project contains a folder titled \texttt{examples}, where the main Jupyter notebooks to perform each of the separate tasks of this project are implemented. The directory structure is organised as follows:
+The modules are implemented as Python packages, each containing the necessary code and resources for its specific functionality. Additionally, the project contains a folder titled \texttt{examples}, where the main Jupyter notebooks to perform each of the separate tasks of this project are implemented. The directory structure is as follows:
 
 % Add caption and smaller text size and less spacing between lines
 \begin{verbatim}
