Add originality acknowledgement

--- a/report/Thesis.tex
+++ b/report/Thesis.tex
@@ -58,6 +58,7 @@
 \setlength{\parskip}{6pt}
 
 %%%%% Abstract and acknowledgements
+\include{contents/originality}
 \include{contents/abstract}
 \include{contents/acknowledgements}
 
