--- a/report/contents/abstract.tex
+++ b/report/contents/abstract.tex
@@ -1,3 +1,3 @@
 \chapter*{Abstract}
 
-The dynamic and stochastic nature of financial markets together with the highly non-stationary and noisy financial time series data make the task of portfolio optimisation particularly challenging. However, their nature makes them particularly well-suited for \acrfull{drl} algorithms, which can learn a trading strategy directly from the environment. Nonetheless, there are still significant challenges preventing its widespread adoption in the financial industry, such as difficulty in finding the appropriate algorithm with a suitable reward function and lack of transparency and interpretability. This thesis proposes an explainable \acrshort{drl} model for portfolio optimisation with the ability to leverage historical data to learn the optimal trading strategy that balances return maximisation and risk minimisation. Five prominent \acrshort{drl} algorithms are implemented and their performance is evaluated in different scenarios, including the impact of a larger financial environment representation, portfolio size and asset composition. Once the algorithms are trained, post-hoc explainability techniques are applied to understand which market conditions lead to a particular portfolio allocation. Although the performance of the algorithms does not generally outperform all of the benchmarks, the results show that the agents are a powerful tool in portfolio management capable of learning from high-dimensional data and adapting to changing market conditions. The crucial contribution of this research lies in the explainability framework, particularly the use of \acrfull{shap} to provide insights into the decision-making process over the testing period in conjunction with interpretation for specific trading days.  
+The dynamic and stochastic nature of financial markets together with highly non-stationary and noisy financial time series data make the task of portfolio optimisation particularly challenging. However, their nature makes them particularly well-suited for \acrfull{drl} algorithms, which can learn a trading strategy directly from the environment. Nonetheless, there are still significant challenges preventing its widespread adoption in the financial industry, such as the difficulty in finding the appropriate algorithm with a suitable reward function and their lack of transparency and interpretability. This thesis proposes an explainable \acrshort{drl} model for portfolio optimisation with the ability to leverage historical data to learn the optimal trading strategy that balances return maximisation and risk minimisation. Five prominent \acrshort{drl} algorithms are implemented and their performance is evaluated in different scenarios, including the impact of a larger environment representation, portfolio size and asset composition. Once the algorithms are trained, post-hoc explainability techniques are applied to understand which market conditions lead to a particular portfolio allocation. Although the performance of the algorithms does not generally outperform all of the benchmarks, the results show that the agents are a powerful tool in portfolio management capable of learning from high-dimensional data and adapting to changing market conditions. The crucial contribution of this research lies in the explainability framework, particularly the use of \acrfull{shap} to provide insights into the decision-making process over the entire testing period in conjunction with interpretation for specific trading days.  
