--- a/report/contents/acknowledgements.tex
+++ b/report/contents/acknowledgements.tex
@@ -2,4 +2,4 @@
 
 I would like to express my gratitude to my supervisor, Dr. Riaz Ahmad, for his guidance and support throughout this project. I would also like to thank my Master's colleagues for being there during this journey and the valuable discussions we had.
 
-I would like to convey my appreciation to my partner for his unwavering support, encouragement and all the help in reviewing the code and the report. I would also like to acknowledge my family's continuous support and encouragement throughout my studies.
+I would like to convey my appreciation to my partner for his unwavering support and all the help in reviewing the code and the report. I would also like to acknowledge my family's continuous support and encouragement throughout my studies.
