Fix figure captions

--- a/report/contents/background.tex
+++ b/report/contents/background.tex
@@ -89,7 +89,7 @@ The \acrshort{rl} problem can be formalised as a discrete-time stochastic contro
 \begin{figure}[ht]
     \centering
     \input{figures/agent.tex}
-    \caption{Agent interaction with environment}
+    \caption{Agent interaction with environment.}
     \label{fig:agent_environment_interaction}
 \end{figure}
 
@@ -123,7 +123,7 @@ At each time step, the probability of advancing to the next state $s_{t+1}$ is g
 \begin{figure}[ht]
     \centering
     \input{figures/mdp.tex}
-    \caption{Markov Decision Process with policy, transition, and reward functions}
+    \caption{Markov Decision Process with policy, transition, and reward functions.}
     \label{fig:mdp}
 \end{figure}
 
@@ -212,7 +212,7 @@ The taxonomy of the \acrshort{rl} algorithms is shown in Figure \ref{fig:rl_taxo
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.8\textwidth]{figures/rl-taxonomy.png}
-    \caption{Taxonomy of Reinforcement Learning Algorithms \cite{Achiam2018}}
+    \caption{Taxonomy of Reinforcement Learning Algorithms \cite{Achiam2018}.}
     \label{fig:rl_taxonomy}
 \end{figure}
 
@@ -316,7 +316,7 @@ The taxonomy of the \acrshort{xai} methods is shown in Figure \ref{fig:xai_taxon
 \begin{figure}[h]
     \centering
     \input{figures/xai-taxonomy.tex}
-    \caption{Taxonomy of Explainable Artificial Intelligence Methods \cite{Molnar2025}}
+    \caption{Taxonomy of Explainable Artificial Intelligence Methods \cite{Molnar2025}.}
     \label{fig:xai_taxonomy}
 \end{figure}
 
