--- a/report/appendix/explanations.tex
+++ b/report/appendix/explanations.tex
@@ -29,27 +29,27 @@ With the \acrshort{lime} analysis, the explanations for the \acrshort{a2c} algor
     \centering
     \includegraphics[width=0.8\textwidth]{figures/a2c_lime_aapl.png}
     \label{fig:a2c_lime_aapl}
-    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the AAPL asset.}
+    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm for a specific observation in the test dataset for the AAPL asset.}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{figures/a2c_lime_csco.png}
     \label{fig:a2c_lime_csco}
-    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the CSCO asset.}
+    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm for a specific observation in the test dataset for the CSCO asset.}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{figures/a2c_lime_hon.png}
     \label{fig:a2c_lime_hon}
-    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the HON asset.}
+    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm for a specific observation in the test dataset for the HON asset.}
 \end{figure}
 
 \begin{figure}
     \centering
     \includegraphics[width=0.8\textwidth]{figures/a2c_lime_v.png}
     \label{fig:a2c_lime_v}
-    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm at the first time step of the test dataset for the V asset.}
+    \caption{\acrshort{lime} explanations for the \acrshort{a2c} algorithm for a specific observation in the test dataset for the V asset.}
 \end{figure}
 
