Fix table captions

--- a/report/tables/commodities_tickers.tex
+++ b/report/tables/commodities_tickers.tex
@@ -1,4 +1,7 @@
 \begin{longtable}{|l|l|}
+\caption{List of 6 Commodities chosen for the portfolio.}
+\label{tab:commodities}
+\\ 
 \hline
 \textbf{Symbol} & \textbf{Name}  \\ \midrule
 \endfirsthead
@@ -16,6 +19,4 @@ GC=F & Gold \\ \hline
 SI=F & Silver \\ \hline
 ALI=F & Aluminum \\ \hline
 HG=F & Copper \\ \hline
-\caption{6 Commodities Futures Contracts}
-\label{tab:commodities}
 \end{longtable}
