--- a/report/tables/currencies_tickers.tex
+++ b/report/tables/currencies_tickers.tex
@@ -1,4 +1,7 @@
 \begin{longtable}{|l|l|}
+\caption{List of 10 currency pairs chosen for the portfolio.}
+\label{tab:currencies}
+\\
 \hline
 \textbf{Symbol} & \textbf{Name}  \\ \midrule
 \endfirsthead
@@ -20,6 +23,4 @@ CHFUSD=X & \acrfull{chf}/\acrshort{usd} \\ \hline
 HKDUSD=X & \acrfull{hkd}/\acrshort{usd} \\ \hline
 KRWUSD=X & \acrfull{krw}/\acrshort{usd} \\ \hline
 INRUSD=X & \acrfull{inr}/\acrshort{usd} \\ \hline
-\caption{10 Currency Pairs}
-\label{tab:currencies}
 \end{longtable}
