--- a/report/tables/dataset_split.tex
+++ b/report/tables/dataset_split.tex
@@ -1,4 +1,7 @@
 \begin{longtable}{|l|l|l|l|}
+    \caption{Train-Validation-Test Split for each dataset.}
+    \label{tab:dataset-split}
+    \\
     \hline
     \textbf{Dataset} & \textbf{Training Period} & \textbf{Validation Period} & \textbf{Testing Period} \\ \midrule
     \endfirsthead
@@ -19,6 +22,4 @@
     \hline
     Currencies & Jan 2016 - Dec 2022 & Jan 2023 - Dec 2023 & Jan 2024 - Jul 2025 \\
     \hline
-    \caption{Train-Validation-Test Split for each dataset}
-    \label{tab:dataset-split}
 \end{longtable}
