--- a/report/tables/eurostoxx50_tickers.tex
+++ b/report/tables/eurostoxx50_tickers.tex
@@ -1,4 +1,7 @@
 \begin{longtable}{|p{2cm}|p{3cm}|p{4cm}|p{4cm}|}
+\caption{Constituents of the Euro Stoxx 50 index as of April 2025\cite{WikipediaEuroStoxx50}.}
+\label{tab:eurostoxx50constituents}
+\\ 
 \hline
 \textbf{Symbol} & \textbf{Name} & \textbf{Sector} & \textbf{Industry} \\ \midrule
 \endfirsthead
@@ -60,6 +63,4 @@ TTE.PA & TotalEnergies & Energy & Oil \& Gas Integrated \\ \hline
 DG.PA & Vinci & Industrials & Engineering \& Construction \\ \hline
 UCG.MI & UniCredit & Financial Services & Banks - Regional \\ \hline
 VOW.DE & Volkswagen & Consumer Cyclical & Auto Manufacturers \\ \hline
-\caption{Constituents of the Euro Stoxx 50 index as of April 2025. \cite{WikipediaEuroStoxx50}}
-\label{tab:eurostoxx50constituents}
 \end{longtable}
