--- a/report/contents/nomenclature.tex
+++ b/report/contents/nomenclature.tex
@@ -14,7 +14,7 @@
 \nomenclature[B, 07]{$\{0, 1\}$}{Set containing $0$ and $1$}
 \nomenclature[B, 08]{$\{0, 1, ..., n\}$}{Set of all integers between $0$ and $n$ inclusive}
 \nomenclature[B, 09]{$\emptyset$}{Empty set}
-\nomenclature[B, 10]{$\mathbb{A}\subset\mathbb{B}$}{Set $\mathbb{A}$ is a subset of set $\mathbb{B}$}
+\nomenclature[B, 10]{$\mathbb{A}\subset\mathbb{B}$}{Set $\mathbb{A}$ is a proper subset of set $\mathbb{B}$}
 \nomenclature[B, 11]{$\mathbb{A}\subseteq\mathbb{B}$}{Set $\mathbb{A}$ is a subset or equal to set $\mathbb{B}$}
 \nomenclature[B, 12]{$\mathbb{A}\cap\mathbb{B}$}{Intersection of sets $\mathbb{A}$ and $\mathbb{B}$}
 \nomenclature[B, 13]{$\mathbb{A}\cup\mathbb{B}$}{Union of sets $\mathbb{A}$ and $\mathbb{B}$}
