--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -44,7 +44,7 @@
 {
     name=Portfolio Optimisation,
     text={portfolio optimisation},
-    description={Process of selecting the best distribution of assets in a portfolio to achieve specific investment goals, such as maximising returns or minimising risk, while considering constraints and preferences}
+    description={Process of selecting the best distribution of assets in a portfolio to achieve specific investment goals, such as maximising returns or minimising risk}
 }
 \newglossaryentry{advantageactorcritic}
 {
@@ -59,7 +59,7 @@
 \newglossaryentry{deepdeterministicpolicygradient}
 {
     name=Deep Deterministic Policy Gradient,
-    description={Algorithm that uses deep neural networks to learn policies for continuous action spaces, combining the benefits of deep learning and policy gradient methods}
+    description={Algorithm that uses deep neural networks to learn policies for continuous action spaces}
 }
 \newglossaryentry{twindelayeddeepdeterministicpolicygradient}
 {
@@ -74,12 +74,12 @@
 \newglossaryentry{shapleyadditiveexplanations}
 {
     name=SHapley Additive exPlanations,
-    description={Method for interpreting machine learning models by assigning each feature an importance value for a particular prediction, based on cooperative game theory}
+    description={Method based on Shapley values and cooperative game theory for interpreting machine learning models}
 }
 \newglossaryentry{localinterpretablemodelagnosticexplanations}
 {
     name=Local Interpretable Model-agnostic Explanations,
-    description={Technique for explaining the predictions of any machine learning model by approximating it with a locally interpretable model, allowing users to understand the model's behaviour in a specific instance}
+    description={Technique for explaining the predictions of any machine learning model its behaviour in a local region with an interpretable model, allowing users to understand the model's decisions for a specific observation}
 }
 \newglossaryentry{featureimportance}{
     name=Feature Importance,
@@ -88,12 +88,12 @@
 \newglossaryentry{rewardfunction}{
     name=Reward Function,
     text={reward function},
-    description={Function that defines the feedback signal received by an agent in reinforcement learning, guiding the agent's learning process by providing rewards or penalties based on its actions}
+    description={Function that defines the feedback signal received by an agent in reinforcement learning}
 }
 \newglossaryentry{hyperparameters}{
     name=Hyper-parameter,
     text={hyper-parameter},
-    description={Parameter that is set before the learning process begins and control the learning process of a machine learning model, such as learning rate, batch size, and number of layers in a neural network}
+    description={Parameter that is set before the learning process begins and controls the learning process of a machine learning model, such as learning rate, batch size, and number of layers in a neural network}
 }
 \newglossaryentry{efficientfrontier}{
     name=Efficient Frontier,
