Remove undefined variable

--- a/report/contents/glossary.tex
+++ b/report/contents/glossary.tex
@@ -196,9 +196,7 @@
 \newacronym{mdi}{MDI}{Negative Directional Index}
 \newacronym{roc}{ROC}{Rate of Change}
 \newacronym{vix}{VIX}{Volatility Index}
-\newacronym{vftse}{VFTSE}{Volatility FTSE}
-\newacronym{vstoxx}{VSTOXX}{Volatility Euro Stoxx}
-\newacronym{vxd}{VXD}{Volatility DW30}
+\newacronym{vxd}{VXD}{Volatility Dow Jones 30 Index}
 \newacronym{ftse100}{FTSE 100}{Financial Times Stock Exchange 100 Index}
 \newacronym{sp500}{S\&P 500}{Standard and Poor's 500 Index}
 \newacronym{dw30}{DW30}{Dow Jones 30 Index}
