--- a/report/bibliography.bib
+++ b/report/bibliography.bib
@@ -42,6 +42,15 @@
   url       = {https://arxiv.org/abs/1910.10045v2},
   year      = {2019}
 }
+@article{Bathaee2018TheAI,
+  title   = {The Artificial Intelligence Black Box and the Failure of Intent and Causation},
+  author  = {Yavar Bathaee},
+  journal = {Harvard Journal of Law \& Technology},
+  year    = {2018},
+  volume  = {31},
+  pages   = {889},
+  url     = {https://jolt.law.harvard.edu/assets/articlePDFs/v31/The-Artificial-Intelligence-Black-Box-and-the-Failure-of-Intent-and-Causation-Yavar-Bathaee.pdf}
+}
 @misc{BCSCodeConduct,
   author = {British Computer Society},
   title  = {BCS Code of Conduct},
