--- a/report/contents/introduction.tex
+++ b/report/contents/introduction.tex
@@ -1,27 +1,27 @@
 \chapter{Introduction} \label{ch:introduction}
 
-\Gls{financialmarkets} are highly complex systems influenced by numerous factors, including financial and political events, social trends and technological advancements. Moreover, their evolving and stochastic nature requires using the most advance computational developments to model the financial environment. The tasks of financial time series prediction and \gls{portfoliooptimisation} are considerably intricate, due to the semi-strong form of market efficiency and the high level of noise. \cite{Shen2020}
+\Gls{financialmarkets} are highly complex systems influenced by numerous factors, including economic and political events, social trends and technological advancements. Moreover, their evolving and stochastic nature requires using the most advance computational developments to model the financial environment. The tasks of financial time series prediction and \gls{portfoliooptimisation} are considerably intricate, due to the semi-strong form of market efficiency and the high level of noise. \cite{Shen2020}
 
 \Gls{algorithmictrading} focuses on the application of analytical methods to automatically execute trading actions based on an algorithm without human intervention. Initially, the field mainly studied the usage of a computer program to follow a predefined strategy \cite{Lei2020}. More recently, algorithmic trading involves environment perception by learning feature representation from highly non-stationary and noisy financial time series data, and decision-making by exploring the environment and simultaneously taking actions without supervision \cite{Ma2021}.
 
-\acrfull{ml} has an advantage for the task due to its ability to learn from historical data and make predictions about the future state of an environment. Research has explored the application of \acrfull{dl} in future price prediction of financial assets \cite{Hasan2024,Nti2020,Shen2020,Wu2023}. However, its main disadvantage is the inability to directly deal with trading, requiring an additional step to convert the predictions into actionable strategies. In contrast, \acrfull{rl} allows the algorithm to learn a trading strategy directly from the environment, without the need for a separate step \cite{Moody2001,Yang2020}. In this case, there are two main approaches: first, the algorithm can learn the amount of assets to buy, sell or hold at each time step \cite{Liu2018}, or second, the algorithm can learn the optimal portfolio allocation and automatically rebalance the portfolio weights at each time step \cite{Guan2021}.
+\acrfull{ml} has an advantage for the task due to its ability to learn from historical data and make predictions about the future state of an environment. Research has explored the application of \acrfull{dl} in future price prediction of financial assets \cite{Hasan2024,Nti2020,Shen2020,Wu2023}. However, its main disadvantage is the inability to directly handle trading, requiring an additional step to convert the predictions into actionable strategies. In contrast, \acrfull{rl} allows the algorithm to learn a trading strategy directly from the environment, without the need for a separate step \cite{Moody2001,Yang2020}. In this case, there are two main approaches: first, the algorithm can learn the amount of assets to buy, sell or hold at each time step \cite{Liu2018}, or second, the algorithm can learn the optimal portfolio allocation and automatically rebalance the portfolio weights at each time step \cite{Guan2021}.
 
 Despite the potential of \acrshort{rl} in portfolio optimisation, its widespread adoption in the financial industry remains limited. This is primarily due to following challenges \cite{Cortes2024}:
 \begin{enumerate}
     \item difficulty in finding the appropriate algorithm with a suitable \gls{rewardfunction} and \glspl{hyperparameters} to ensure efficiency and performance,
     \item challenge of testing the algorithm in a real-world environment, and
-    \item lack of transparency of \acrshort{ml} models, often referred to as \glspl{blackbox}, making it increasingly complex to interpret the algorithm's decisions. 
+    \item lack of transparency of \acrshort{ml} models, often referred to as \glspl{blackbox}, making it increasingly intractable to interpret the algorithm's decisions.
 \end{enumerate}
 
-In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its \gls{blackbox} nature. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant within the financial domain, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024}, have explored the concept of explainability in financial applications. 
+In recent years, the rise in popularity of \acrfull{ai} and its widespread use have led to concerns regarding its decisions due to its \gls{blackbox} nature \cite{Bathaee2018TheAI}. The concept of explainability in \acrshort{ai}, known as \acrfull{xai}, refers to a model's ability to provide details and reasons to make itself understandable \cite{BarredoArrieta2019}. The term was first coined in 2016 to describe the need for users to effectively understand, trust and manage artificial intelligence applications \cite{Gunning2019}. The need for explainability becomes particularly relevant within the financial domain, where the regulatory framework requires transparency and accountability in automated decision-making. Various relevant applications, including volatility models \cite{Brigo2021}, credit risk assessment \cite{GarciaCespedes2025} and portfolio construction \cite{Cortes2024}, have explored the concept of explainability in financial applications. 
 
-Consequently, this thesis will focus on addressing the aforementioned challenges by exploring the application of \acrfull{drl} to portfolio optimisation and implementing explainability techniques.
+Consequently, this thesis will focus on addressing the aforementioned challenges by exploring the application of \acrfull{drl} to portfolio optimisation and implementing explainability techniques to understand model behaviour.
 
 \section{Objectives} \label{sec:introduction-objectives}
 
-The objective of this thesis is to develop an explainable \acrlong{drl} model for portfolio optimisation. A \acrshort{drl} model has the ability to leverage historical financial data to learn an investment strategy that efficiently allocates financial assets while maximising expected returns and minimising risk. Moreover, the incorporation of advanced explainability techniques enhances the interpretability and transparency of the model's decision-making. This project aims to bridge the gap between cutting-edge machine learning techniques and their practical application in finance by addressing the challenges of algorithm selection, simulation of real-world scenarios, and \gls{blackbox} nature of \acrshort{ml} models.
+The objective of this thesis is to develop an explainable \acrshort{drl} model for portfolio optimisation. A \acrshort{drl} model has the ability to leverage historical financial data to learn an investment strategy that efficiently allocates financial assets while maximising expected returns and minimising risk. Moreover, the incorporation of advanced explainability techniques enhances the interpretability and transparency of the model's decision-making. This project aims to bridge the gap between cutting-edge machine learning techniques and their practical application in finance by addressing the challenges of algorithm selection, simulation of real-world scenarios, and \gls{blackbox} nature of \acrshort{ml} models.
 
-First, \acrshort{drl} models, such as \acrfull{a2c}, \acrfull{ppo}, \acrfull{ddpg}, \acrfull{td3} and \acrfull{sac}, will be implemented to learn the optimal portfolio allocation from high-dimensional environment representations. The algorithms will be trained on historical financial data, including technical and macroeconomic indicators, with the goal of capturing the complex market dynamics. Each of the algorithms is better suited to a particular scenario, for instance, \acrshort{ddpg} encourages maximum returns, while \acrshort{a2c} reduces the variance and \acrshort{ppo} is better at balancing \gls{exploration} versus \gls{exploitation}.
+First, \acrshort{drl} models, namely \acrfull{a2c}, \acrfull{ppo}, \acrfull{ddpg}, \acrfull{td3} and \acrfull{sac}, will be employed to learn the optimal portfolio allocation from high-dimensional environment representations. The algorithms will be trained on historical financial data, including technical and macroeconomic indicators, with the goal of capturing the complex market dynamics. Each of the algorithms is better suited to a particular scenario, for instance, \acrshort{ddpg} encourages maximum returns \cite{Lillicrap2015}, while \acrshort{a2c} reduces the variance \cite{Mnih2016} and \acrshort{ppo} is better at balancing \gls{exploration} versus \gls{exploitation} \cite{Schulman2017}.
 
 Second, post-hoc explainability techniques: \Gls{featureimportance}, \acrfull{lime} and \acrfull{shap} will be applied to interpret the model's decisions. The goal of these is to understand which market conditions, represented by financial data, lead to the actions/decisions, encoded as portfolio weights. 
 
@@ -33,12 +33,12 @@ This report is organised into six chapters, each of which focuses on a concrete 
 
 The current chapter, \ref{ch:introduction}, presents the motivation and the objectives of this thesis. It gives an overview of the potential of \acrshort{drl} in portfolio optimisation and its main challenges, particularly the lack of transparency of \acrshort{ml} models. 
 
-Chapter \ref{ch:background} provides an overview of the theoretical background of the project, including portfolio allocation and \acrlong{machinelearning} concepts. The problem of portfolio optimisation in the financial domain is outlined and the potential of \acrshort{drl} in this context is discussed. The chapter provides a comprehensive background explanation of the fundamentals of \acrlong{dl} and \acrlong{rl}, including the main algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3}, \acrshort{sac}). In addition, it gives an overview of the post-hoc explainability techniques: \Gls{featureimportance},\acrfull{lime} analysis and \acrfull{shap} values, which will be used to interpret the model's decisions. Finally, it includes a comprehensive in-depth literature review on the topics of \acrshort{ml} applied to portfolio optimisation and relevant applications of explainability techniques. 
+Chapter \ref{ch:background} provides an overview of the theoretical background of the project. The problem of financial portfolio optimisation is outlined and the potential of \acrshort{drl} in this context is discussed. The chapter provides a comprehensive background explanation of the fundamentals of \acrlong{dl} and \acrlong{rl}, including the main algorithms (\acrshort{a2c}, \acrshort{ppo}, \acrshort{ddpg}, \acrshort{td3}, \acrshort{sac}). In addition, it gives an overview of the post-hoc explainability techniques (\Gls{featureimportance}, \acrshort{lime} and \acrshort{shap}) used to interpret the model's decisions. Finally, it includes a comprehensive in-depth literature review on the topics of \acrshort{ml} applied to portfolio optimisation and relevant applications of explainability techniques. 
 
-The methodology, chapter \ref{ch:methodology}, describes the techniques and methods used to tackle the problem and outlines the implementation of the proposed solution. The chapter provides a detailed explanation of the architecture and components of the proposed \acrshort{drl} model, including the state representation and reward function. Furthermore, given the trained algorithms, it describes the implementation of the post-hoc explainability techniques.
+The methodology, chapter \ref{ch:methodology}, describes the techniques and methods used and outlines the implementation of the proposed solution. The chapter provides a detailed explanation of the architecture and components of the proposed \acrshort{drl} model, including the state representation and reward function. Furthermore, given the trained algorithms, it describes the implementation of the post-hoc explainability techniques.
 
-The results of the experiments are presented in chapter \ref{ch:results}, which analyses and evaluates the results obtained from the proposed implementation, while critically discussing the findings. It provides a detailed comparison of the proposed \acrshort{drl} strategies with traditional portfolio optimisation methods. Furthermore, it consists of an in-depth analysis of the model's decisions using post-hoc explainability techniques, in particular, feature importance, \acrshort{lime} and \acrshort{shap}.  
+The results of the experiments are presented in chapter \ref{ch:results}, which analyses and evaluates the performance of the proposed methodology, while critically discussing the findings. It provides a detailed comparison of the \acrshort{drl} strategies with traditional portfolio optimisation methods. Furthermore, it consists of an analysis of the model's decisions using post-hoc explainability techniques.
 
 Chapter \ref{ch:issues} discusses the legal, social, ethical and professional implications within the context of the project. By addressing these issues, the project aims to ensure that the proposed solution adheres to industry standards, while considering the implications of the technology.
 
-Finally, the report concludes with a summary of the main points of the work, the contributions made, the results achieved as well as potential applications and future work in chapter \ref{ch:conclusion}.
+Finally, the report concludes with a summary of the main points of the work, the contributions made, in conjunction with potential applications and future work in chapter \ref{ch:conclusion}.
